some template of project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="coin"></div>
+        <div class="coin">
+            <div class="coin-image">
+                <img src="https://pngimg.com/uploads/bitcoin/bitcoin_PNG48.png" alt="">
+            </div>
+            <div class="coin-name">
+                <h3>Bitcoin</h3>
+                <span>/USD</span>
+            </div>
+            <div class="coin-price">
+                <span class="price">$26579</span>
+                <span class="change">-1.6573%</span>
+            </div>
+        </div>
     </div>
 
 
