--- a/index.html
+++ b/index.html
@@ -8,21 +8,7 @@
     <title>Crypto Price Tracker</title>
 </head>
 <body>
-    <div class="container">
-        <div class="coin">
-            <div class="coin-image">
-                <img src="https://pngimg.com/uploads/bitcoin/bitcoin_PNG48.png" alt="">
-            </div>
-            <div class="coin-name">
-                <h3>Bitcoin</h3>
-                <span>/USD</span>
-            </div>
-            <div class="coin-price">
-                <span class="price">$26579</span>
-                <span class="change">-1.6573%</span>
-            </div>
-        </div>
-    </div>
+    <div class="container"></div>
 
 
     <script src="script.js"></script>
